# vanguard-ai-jobHunting

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  GEMINI.md  README.md  alembic.ini  cli.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  shadow_logger.py
.github/workflow/: ci.yaml
.github/workflows/: ci.yml
UI/: COMPONENTS.md  index.html  package.json
config/: jobsites.yaml
core/: ai_agent.py  browser.py  browser_engine.py  config_manager.py  database.py  logging.py  models_tech.py  orchestrator.py  pg_listener.py  scraper.py  security.py  task_manager.py  websocket_manager.py  worker.py
core/mcp/: mcp_browser.py
docs/: BLUEPRINT.md  DESIGN.md  DESIGN_SYSTEM.md  PLAN.md  SCHEMA_DB.md  TODO_LIST.md  UX_doc.md  dev_log.md  issue.md  product_state.md  project_dev_log.md  prompt_after_and_befor_work.md  prompts.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: dashboard.test.tsx  layout.test.tsx
migrations/models/: 0_20260218010034_init.py  1_20260223025103_None.py
modules/agent/: agent_router.py  agent_schemas.py  models.py  planner.py  repository.py  router.py  service.py  tools.py
modules/auth/: model.py  router.py  service.py
modules/generator/: models.py  services.py
modules/profile/: models.py  profile_router.py  repository.py  router.py  service.py
prompts/: agent_prompt.md
scripts/: run_agent_simulation_mock.py  seed_db.py
shared/: schemas.py
templates/: base.html
templates/components/: log_item.html  navbar.html  sidebar.html
templates/pages/: agent.html  dashboard.html  profile.html  profile_content.html
tests/: conftest.py  test_orchestrator.py  test_task_manager.py  test_worker_integration.py
tests/e2e/: test_full_pipeline.py  test_mcp_flow.py  test_scraping.py
tests/integration/: test_concurrency.py  test_integration_check.py  test_malware_scan.py  test_mcp_integration.py  test_observability.py  test_security_gate.py
tests/unit/: test_ai_integration.py  (+6 more)
(+37 files in other folders)
