[project]
name = "vanguard-job-huting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.2",
    "asyncpg>=0.31.0",
    "fpdf2>=2.8.5",
    "google-genai>=1.62.0",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
]

[tool.aerich]
tortoise_orm = "core.database.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
