[project]
name = "vanguard-job-huting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.2",
    "aiopg>=1.4.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "clamd>=1.0.2",
    "email-validator>=2.3.0",
    "faker>=40.4.0",
    "fastapi>=0.129.0",
    "fpdf2>=2.8.5",
    "google-genai>=1.62.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "ruff>=0.15.4",
    "sqlalchemy>=2.0.46",
    "structlog>=25.5.0",
    "taskiq>=0.12.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.41.0",
]

[tool.aerich]
tortoise_orm = "core.database.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
